--- a/TPS/TP1/ej8.ipynb
+++ b/TPS/TP1/ej8.ipynb
@@ -114,9 +114,7 @@
    "id": "6ae4ef35",
    "metadata": {},
    "source": [
-    "Este es un filtro Pasa-altos.Este filtro tendra una ganancia....\n",
-    "\n",
-    "si hacemos $ \\omega_o = 1 $"
+    "Este es un filtro Pasa-altos."
    ]
   },
   {
@@ -196,6 +194,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b40583c",
+   "metadata": {},
+   "source": [
+    "Este es un filtro Pasa-banda."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "4d857cf0",
@@ -271,9 +277,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d6a3e4f",
+   "metadata": {},
+   "source": [
+    "Este es un filtro Pasa-bajos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcc35413",
+   "id": "68d6086e",
    "metadata": {},
    "outputs": [],
    "source": []
