--- a/TPS/TP1/ej8.ipynb
+++ b/TPS/TP1/ej8.ipynb
@@ -12,7 +12,6 @@
     "\"\"\"\n",
     "Created on Mon Apr 11 10:52:56 2022\n",
     "\n",
-    "@author: bruno\n",
     "\"\"\"\n",
     "\n",
     "import sympy as sp\n",
@@ -73,7 +72,7 @@
     }
    ],
    "source": [
-    "# Ejercicio 8.a: Pasatodo de 1er orden\n",
+    "# Ejercicio 8.a:\n",
     "\n",
     "transf_func = aa[V1]/aa[Vi] #Aca defino mi transf_funct como el cociente entre Vo y Vi (Vo/Vi). Tambien es simbolica\n",
     "\n",
@@ -159,7 +158,7 @@
     }
    ],
    "source": [
-    "# Ejercicio 8.b: Pasatodo de 1er orden\n",
+    "# Ejercicio 8.b:\n",
     "\n",
     "transf_func = aa[V2]/aa[Vi] #Aca defino mi transf_funct como el cociente entre Vo y Vi (Vo/Vi). Tambien es simbolica\n",
     "\n",
@@ -243,7 +242,7 @@
     }
    ],
    "source": [
-    "# Ejercicio 8.c: Pasatodo de 1er orden\n",
+    "# Ejercicio 8.c:\n",
     "\n",
     "transf_func = aa[V3]/aa[Vi] #Aca defino mi transf_funct como el cociente entre Vo y Vi (Vo/Vi). Tambien es simbolica\n",
     "\n",
