--- a/TPS/TP1/ej9.ipynb
+++ b/TPS/TP1/ej9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "8bfdebb8",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
     "transf_func = aa[Vo]/aa[Vi] #Aca defino mi transf_funct como el cociente entre Vo y Vi (Vo/Vi). Tambien es simbolica\n",
     "\n",
     "tf9 = transf_func.subs(Z2, 1/(s*C2)) #reemplazo Y1 e Y2 por sus respectivos valores simbolicos\n",
-    "tf9 = tf7a.subs(Z5, 1/(s*C5))\n",
+    "tf9 = tf9.subs(Z5, 1/(s*C5))\n",
     "\n",
     "num, den = sp.fraction(sp.simplify(sp.expand(tf9)))  #simplificamos y separamos numerador y denominador\n",
     "\n",
@@ -86,7 +86,7 @@
     "print('################')\n",
     "print('# Ejercicio 9 #')\n",
     "print('################')\n",
-    "display(tf7a_final)\n",
+    "display(tf9_final)\n",
     "display(Math( r' \\omega_o = ' + sp.latex(wo) ))\n",
     "\n"
    ]
