Ordenamiento de carpetas

--- a/TP Semanales/TS2/TPS2.ipynb
+++ b/TP Semanales/TS2/TPS2.ipynb
@@ -204,13 +204,13 @@
     "Simulacion en LTSpice:\n",
     "\n",
     "Pasabajos:\n",
-    "<img src=\"img/pasa_bajos.png\">\n",
+    "<img src=\"../img/pasa_bajos.png\">\n",
     "\n",
     "Butterworth:\n",
-    "<img src=\"img/Butterworth.png\">\n",
+    "<img src=\"../img/Butterworth.png\">\n",
     "\n",
     "Pasabandas:\n",
-    "<img src=\"img/pasa_banda.png\">\n"
+    "<img src=\"../img/pasa_banda.png\">\n"
    ]
   },
   {
