--- a/TP Semanales/TS5/TS5_2B.ipynb
+++ b/TP Semanales/TS5/TS5_2B.ipynb
@@ -245,6 +245,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e9844dc",
+   "metadata": {},
+   "source": [
+    "El circuito equivalente para obtener esta transferencia lo obtenemos del modelo general bicuadratico:\n",
+    "\n",
+    "<img src=\"img/circuito_ej2b.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c4815f0",
    "metadata": {},
    "source": [
@@ -268,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
