--- a/TP Semanales/TS5/TS5.ipynb
+++ b/TP Semanales/TS5/TS5.ipynb
@@ -348,7 +348,7 @@
     "\n",
     "### Ejercicio 2c\n",
     "\n",
-    "En este caso debemos obtener una fase que vaya de 0 a -2$\\pi$, eso quiere decir que necesitamos un pasatodo. Observando la fase que nos dan, se puede ver que $\\phi(w) = -\\pi\n"
+    "En este caso debemos obtener una fase que vaya de 0 a -2$\\pi$, eso quiere decir que necesitamos un pasatodo. Observando la fase que nos dan, se puede ver que $\\phi(0.5) = -\\pi$. Eso nos dice que $\\omega_p = \\omega_n = 0.5$\n"
    ]
   },
   {
