--- a/TP Semanales/TS3/TS3_Final.ipynb
+++ b/TP Semanales/TS3/TS3_Final.ipynb
@@ -21,7 +21,7 @@
    "id": "6fef9761",
    "metadata": {},
    "source": [
-    "Buscamos los polos y ceros. Para ello voy a noramlizar epsilon ($\\xi^2 = 1$). Estamos normalizando respecto a \\omega = \\omega_B$"
+    "Buscamos los polos y ceros. Para ello voy a noramlizar epsilon ($\\xi^2 = 1$). Estamos normalizando respecto a $\\omega = \\omega_B$"
    ]
   },
   {
@@ -346,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
