--- a/TPS/TPL1/TPL1.ipynb
+++ b/TPS/TPL1/TPL1.ipynb
@@ -219,7 +219,12 @@
    "source": [
     "### Calculo de los componentes\n",
     "\n",
-    "$ A_{BP} = 1 $  $ R_4 = R_5 = 50k $  \n",
+    "<img src=\"img/param_diseño.png\" width=600>\n",
+    "\n",
+    "Varios de los componentes son internos al micro y sus valores ya estan definidos.\n",
+    "\n",
+    "$ A_{BP} = 1 $  $ R_4 = R_G = 50k $  \n",
+    "\n",
     "Podemos entrar por el pin 2\n",
     "\n",
     "$ W_n^2 = (6 KHz \\cdot 2 \\pi)^2 = \\frac{R_2}{R_1 R_{F1} R_{F2} C_1 C_2} $  \n",
@@ -232,9 +237,24 @@
     "$ 5,2932 = (2 + \\frac{R_G}{R_Q}) \\cdot (\\frac{R_F1}{R_F2})^{\\frac{1}{2}} $  \n",
     "\n",
     "Si utilizamos:\n",
-    "$ R_{F1} = 33 K\\Omega $  $ R_{F2} = 22 K\\Omega $  $ R_Q = 22 K\\Omega $  \n",
+    "$ R_{F1} = 33 K\\Omega $\n",
+    "\n",
+    "$ R_{F2} = 22 K\\Omega $\n",
+    "\n",
+    "$ R_Q = 22 K\\Omega $  \n",
+    "\n",
     "$ f_c = 5906,793949 Hz $  \n",
-    "$ Q = 5,233 $  "
+    "\n",
+    "$ Q = 5,233 $  \n",
+    "\n",
+    "El Q pedido en el enunciado no lo podemos cumplir.\n",
+    "\n",
+    "## Circuito\n",
+    "\n",
+    "<img src=\"img/circuitoTPL1.PNG\" width= 800px>\n",
+    "\n",
+    "\n",
+    "<img src=\"img/simulacionTPL1.PNG\" width= 800px>\n"
    ]
   },
   {
@@ -242,7 +262,7 @@
    "id": "5e9e7736",
    "metadata": {},
    "source": [
-    "El siguiente paso es el armado del circuito:\n",
+    "# Armado del circuito\n",
     "\n",
     "Para este trabajo realizamos un circuito impreso utilizando KiCad.\n",
     "Se utilizo el filtro UAF42 que es un filtro activo que puede ser configurado para obtener un filtro pasa-bajos, pasa-banda o pasa-alto.\n",
@@ -258,14 +278,20 @@
    "source": [
     "La segunda parte del trabajo es testear todo en el laboratorio.\n",
     "\n",
-    "Se uso un generador de funciones para introducir una señal senoidal a la entrada del filtro (datasheet).\n",
+    "Se uso un generador de funciones para introducir una señal senoidal a la entrada del filtro ([TFG-3205E](https://www.atsdhaka.com/files/201809/1536690674_FunctionGenerator-TFG-3205E.pdf)).\n",
+    "Para alimentar al UAF42 se usaron dos fuentes de alimentacion ([HY3005D](https://static.rapidonline.com/pdf/554308_v1.pdf?utm_source=AffWin&utm_medium=Affiliate&awc=1799_1656605572_215141de5da33515ac558c2dffe1cc42)) que entregaron +9V y -9V al integrado.\n",
+    "Para medir obtener los datos de la transferencia, es decir la ganancia y la fase, se uso un osciloscopio ([GDS-1102A](https://www.tme.com/Document/82b584d032c1a158936eabaa6677334e/GDS-1000A-U.pdf)).\n",
     "\n",
-    "Para alimentar al UAF42 se usaron dos fuentes de alimentacion que entregaron +9V y -9V al integrado.\n",
-    "\n",
-    "Para medir obtener los datos de la transferencia, es decir la ganancia y la fase, se uso un osciloscopio (modelo).}\n",
-    "\n",
-    "El metodo que se utilizo para obtener valores "
+    "Para realizar las mediciones en el laboratorio se fueron generando señales senoidales de 1 Vpp. Las frecuencias fueron elegidas de modo que quedaran equiespaciadas en el diagrama de Bode.\n",
+    "En el osciloscopio se puso en el Canal 1 la señal de entrada y en el Canal 2 la señal de salida, de modo que podiamos ver ambas señales juntas.\n",
+    "Utilizando las funciones del osciloscopio podiamos ver la ganancia de la señal de salida y la diferencia de tiempo que habia entre un pico de la señal de entrada y un pico de la señal de salida. Con este ultimo dato se puede calcular la fase y el retardo de grupo."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbc4229a",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -292,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
