--- a/TPS/TP2/TP2_G5/TP2 Grupo 5.ipynb
+++ b/TPS/TP2/TP2_G5/TP2 Grupo 5.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "8066b5b9",
    "metadata": {},
    "outputs": [
@@ -780,10 +780,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x229bf920100>"
+       "<IPython.lib.display.IFrame at 0x1c88d79a190>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "09ff99ec",
    "metadata": {},
    "outputs": [
@@ -1837,10 +1837,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1abe7e78e80>"
+       "<IPython.lib.display.IFrame at 0x1c88d78f1c0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "31d397e0",
    "metadata": {},
    "outputs": [
@@ -1979,10 +1979,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1abe7e7fe50>"
+       "<IPython.lib.display.IFrame at 0x1c88d788d90>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
