--- a/TP Semanales/TS8/TS8.ipynb
+++ b/TP Semanales/TS8/TS8.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a064cbfe",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "d83e4ca1",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "02b16a8d",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
        "(1, <AxesSubplot:xlabel='$\\\\sigma$', ylabel='j$\\\\omega$'>)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -523,8 +523,22 @@
     "from scipy.signal import TransferFunction\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "my_tf = TransferFunction( [1,1], [1,0] )\n",
+    "num_z = [1,1] #numerador de filtro digital\n",
+    "den_z = [1,0] #denominador de filtro digital\n",
+    "\n",
+    "my_tf = TransferFunction( num_z, den_z )\n",
     "pzmap(my_tf, 2) #S plane pole/zero plot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79d59341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dig_filter = sig.TransferFunction(num_z,den_z,dt = 1/fs) #al indicar dt le decimos a la funcion que la transferencia es en Z\n",
+    "analyze_sys(my_dig_filter,'filtro')"
    ]
   },
   {
