--- a/TP Semanales/TS12/Untitled.ipynb
+++ b/TP Semanales/TS12/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "f06b771e",
    "metadata": {},
    "outputs": [
@@ -18,10 +18,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{s^{3} \\left(s^{3} + s^{2} + s + \\frac{1}{2}\\right)}{\\left(s^{3} + 2 s^{2} + 2 s + 1\\right)^{2}}$"
+       "$\\displaystyle s + \\frac{1}{s}$"
       ],
       "text/plain": [
-       "s**3*(s**3 + s**2 + s + 1/2)/(s**3 + 2*s**2 + 2*s + 1)**2"
+       "s + 1/s"
       ]
      },
      "metadata": {},
@@ -36,19 +36,23 @@
     "import math as m\n",
     "\n",
     "\n",
-    "x1 = Rational('2/7')#esta mal porque es una resistencia negativa\n",
+    "x1 = Rational('7/3')#esta mal porque es una resistencia negativa\n",
+    "x2 = Rational('1/3')#esta mal porque es una resistencia negativa\n",
+    "x3 = Rational('3/2')#esta mal porque es una resistencia negativa\n",
     "\n",
-    "z1 = (2*s**3 +2*s**2 + 2*s +1)/(2*s**2 + 2*s +1)\n",
+    "z = (2*s**2 +1)/s\n",
     "\n",
-    "T1 = ((s**3)*(2*s**3 +2*s**2 + 2*s +1))/((s**3 +2*s**2 + 2*s+1)*(2*s**3 +4*s**2 + 4*s+2))\n",
+    "z2 = simplify(z - s)\n",
     "\n",
-    "ZR1 = z1/(z1+1)\n",
+    "zc1= s*x2/(s**2 +2)\n",
     "\n",
-    "S12 = (s**3)*ZR1/(s**3 +2*s**2 + 2*s+1)\n",
+    "#z2 = simplify(z1 - zc1)\n",
     "\n",
-    "Z2 = simplify(S12)\n",
+    "zc2= x3/s\n",
     "\n",
-    "display('Z2',Z2)"
+    "z3 = simplify(1/z2 - zc2)\n",
+    "\n",
+    "display('Z2',z2)"
    ]
   },
   {
